--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,7 @@ include:
   - board: akdk_nrf52840
     shield: settings_reset
     artificial-name: settings_reset
+  - board: akdk_rp2040
+    shield: unsplit36ball
+    snippet: studio-rpc-usb-uart
+    artificial-name: unsplit36ball
